# hydra-merlin

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  openstrata.renderer.yaml  openstrata.toml
.github/scripts/: setup-ost.ps1  setup-vulkan.ps1
.github/workflows/: ci.yml  gpu-capability.yml  release.yml
adapters/merlin-benchmark/: CMakeLists.txt
adapters/merlin-benchmark/src/: main.cpp
adapters/merlin-headless/: CMakeLists.txt
adapters/merlin-headless/src/: main.cpp
adapters/merlin-hydra2/: CMakeLists.txt
adapters/merlin-hydra2/resources/: plugInfo.json
adapters/merlin-hydra2/src/: adapter.cpp  adapter.hpp  renderer_plugin.cpp
adapters/merlin-hydra2/tests/: checker.ppm  plugin_discovery_test.cpp  render_buffer_test.cpp  run_usdview_smoke.cmake  usdview-smoke.usda  usdview_smoke_test.py
adapters/merlin-viewport/: CMakeLists.txt
adapters/merlin-viewport/src/: hydra_scene.cpp  hydra_scene.hpp  main.cpp  presentation_glfw.cpp  presentation_glfw.hpp  window.hpp  window_glfw.cpp
backend/merlin-vulkan/: CMakeLists.txt
backend/merlin-vulkan/include/merlin/vulkan/: backend.hpp  bindless_resource_table.hpp  descriptor_indexing.hpp  render_artifacts.hpp  renderer.hpp  shader_abi.hpp
backend/merlin-vulkan/shaders/: forward-bindless.slang  forward-common.slang  forward.slang  triangle.bindless.frag  triangle.bindless.vert  triangle.frag  triangle.vert
backend/merlin-vulkan/src/: backend.cpp  bindless_resource_table.cpp  descriptor_indexing.cpp  environment_lighting.cpp  environment_lighting.hpp  render_artifacts.cpp  renderer.cpp
cmake/: MerlinConfig.cmake.in  merlin-release-metadata.json.in  prepare-release.cmake  verify-backend-boundaries.cmake  verify-release-metadata.cmake  verify-release-tag.cmake  write-sha256.cmake  write-shader-manifest.cmake
core/merlin-render-backend/: CMakeLists.txt
core/merlin-render-backend/include/merlin/render/: backend.hpp
core/merlin-render-backend/src/: backend.cpp
core/merlin-render-extraction/: CMakeLists.txt
core/merlin-render-extraction/include/merlin/extraction/: frame_snapshot.hpp  persistent_table.hpp  scene_extractor.hpp
core/merlin-render-extraction/src/: scene_extractor.cpp
core/merlin-render-world/: CMakeLists.txt
core/merlin-render-world/include/merlin/core/: change_set.hpp  diagnostic.hpp  render_product.hpp  render_world.hpp  shader_contract.hpp  types.hpp
core/merlin-render-world/src/: render_world.cpp
docs/design/: execution-lifetime.md  gaussian-hydra-ingestion.md  gpu-driven-rendering.md  materialxgenslang-boundary.md  multibackend-slang-materialx.md  openstrata-project.md  renderer-architecture.md
docs/guides/: benchmarking.md  build-and-install.md  cmake-package.md  releasing.md
docs/reference/: support-matrix.md
docs/releases/: README.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
docs/reports/: 2026-07-13-v0.16.0-renderer-adoption-v0.17.0-asks.md  2026-07-15-v0.17.0-dogfooding-v0.18.0-asks.md  README.md  delivery-history.md
docs/reports/ost/: 01-2026-07-11-renderer-template-foundation.md  02-2026-07-12-vulkan-1.4-baseline.md  03-2026-07-12-capability-ci-evidence.md  04-2026-07-13-v0.16.0-renderer-adoption-v0.17.0-asks.md  05-2026-07-15-v0.17.0-dogfooding-v0.18.0-asks.md  06-2026-07-18-v0.17.0-materialx-v0.18.0-asks.md  07-2026-07-18-v0.18.0-recheck-v0.19.0-asks.md  08-2026-07-23-v0.19.0-recheck.md  09-2026-07-23-v0.20.0-asks.md  10-2026-07-24-v0.20.0-recheck-v0.21.0-asks.md  README.md
docs/reports/releases/: 01-2026-07-12-v0.1.0-release-foundation-review.md  README.md
docs/roadmap/: README.md  backlog.md  current.md
material/merlin-materialx/: CMakeLists.txt
material/merlin-materialx/include/merlin/materialx/: compiler.hpp
material/merlin-materialx/src/: compiler.cpp  sha256.cpp  sha256.hpp
scripts/: compare-benchmarks.py  hydra-performance-report.py  prepare-release.ps1
tests/: CMakeLists.txt  backend_contract_test.cpp  bindless_residency_test.cpp  bindless_resource_table_test.cpp  descriptor_indexing_test.cpp  environment_lighting_test.cpp  execution_lifetime_test.cpp  material_resource_test.cpp  materialx_compiler_test.cpp  mesh_scale_regression_test.cpp  render_artifact_test.cpp  render_extraction_test.cpp  render_product_contract_test.cpp  render_world_test.cpp  resource_update_test.cpp  run_benchmark_compare_test.cmake  run_benchmark_test.cmake  run_install_consumer.cmake  sha256_test.cpp  shader_abi_test.cpp  shader_contract_test.cpp  verify_release_tooling.cmake
tests/data/materialx/: compile-wrapper.slang  prototype.mtlx  standard-surface-wrapper.slang  standard-surface.mtlx
tests/install-consumer/: CMakeLists.txt  main.cpp
tests/materialx-install-consumer/: CMakeLists.txt  main.cpp
tests/vulkan-install-consumer/: CMakeLists.txt  main.cpp
